--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -113,24 +113,24 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Estado_Fk)
         </dt>
-            <dd class="col-sm-10">
-                <select asp-for="PedidoTrabajo.ID_Estado_Fk"
-                        asp-items="Model.Estado.Select(d => new SelectListItem
-        {
-            Value = d.ID_Estado_PK.ToString(),
-            Text = d.Descripcion_Estado
-        })"
-                        id="deptSelect"
-                        class="formControl">
-                    <option value="" disabled selected hidden>Seleccione un estado</option>
-                </select>
-            </dd>
+        <dd class="col-sm-10">
+            <select asp-for="PedidoTrabajo.ID_Estado_Fk"
+                    asp-items="Model.Estado.Select(d => new SelectListItem
+            {
+                Value = d.ID_Estado_PK.ToString(),
+                Text = d.Descripcion_Estado
+            })"
+                    id="deptSelect"
+                    class="formControl">
+                <option value="" disabled selected hidden>@Model.PedidoTrabajo.Estado.Descripcion_Estado</option>
+            </select>
+        </dd>
     </dl>
     </form>
     <div class="modal fade" id="ModalEstFin" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <form method="post" asp-page-handler="FinalizarEstadoAsync">
+                <form method="post" asp-page-handler="FinalizarEstado">
                     <div class="modal-header">
                         <h5 class="modal-title" id="FinModalLabel">Finalizar pedido de trabajo</h5>
                     </div>
@@ -151,19 +151,18 @@
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO FINALIZADO -->
-
     <div class="modal fade" id="ModalEstCan" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <form method="post" asp-page-handler="CancelarEstadoAsync">
+                <form method="post" asp-page-handler="CancelarEstado">
                     <div class="modal-header">
                         <h5 class="modal-title" id="CanModalLabel">Cancelar pedido de trabajo</h5>
                     </div>
                     <div class="modal-body">
-                        <label id="labelFechaFinalizado">Fecha de cancelación:</label>
+                        <label id="labelFechaFinalizado">Fecha de cancelacion:</label>
                         <input type="date" id="fechaCan" disabled />
                         <br />
-                        <label id="labelDetalleCancelado">Detalle de la cancelación:</label>
+                        <label id="labelDetalleCancelado">Detalle de la cancelacion:</label>
                         <br />
                         <textarea id="motivoCancelacion" name="motivoCancelacion"></textarea>
                         <input type="hidden" name="OrdenTrabajoId" value="@Model.PedidoTrabajo.ID_Orden_Trabajo_Pk" />
@@ -180,11 +179,10 @@
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO CANCELAR -->
-
     <div class="modal fade" id="ModalEstSus" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <form method="post" asp-page-handler="SuspenderEstadoAsync">
+                <form method="post" asp-page-handler="SuspenderEstado">
                     <div class="modal-header">
                         <h5 class="modal-title" id="SusModalLabel">Suspender Pedido de trabajo</h5>
                     </div>
@@ -213,12 +211,12 @@
                 </form>
             </div>
         </div>
+    </div>
     </div><!-- VENTANA MODAL DE ESTADO SUSPENDIDO -->
-
     <div class="modal fade" id="ModalEstPro" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <form method="post" asp-page-handler="EnProcesoEstadoAsync">
+                <form method="post" asp-page-handler="EnProcesoEstado">
                     <div class="modal-header">
                         <h5 class="modal-title" id="CanModalLabel">Asignar usuario a pedido de trabajo</h5>
                     </div>
@@ -237,11 +235,10 @@
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO EN PROCESO -->
-
     <div class="modal fade" id="ModalEstPen" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <form method="post" asp-page-handler="PendienteEstadoAsync">
+                <form method="post" asp-page-handler="PendienteEstado">
                     <div class="modal-header">
                         <h5 class="modal-title" id="CanModalLabel">Cambiar estado a <b>PENDIENTE</b></h5>
                     </div>
@@ -259,7 +256,6 @@
             </div>
         </div>
     </div><!-- VENTANA MODAL DE ESTADO PENDIENTE -->
-
 
     <div>
         <a asp-page="./Index" class="btn-action">Back to List</a>
