Creacion de vista index de PT Finalizados.

--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -117,7 +117,7 @@
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Estado_Fk)
-        </dt>
+        </dt>de tabal
         <dd class="col-sm-10">
             <select asp-for="PrioridadId"
                     asp-items="Model.Estado.Select(d=> new SelectListItem
