--- a/PPTT/Pages/PT/Finalizados.cshtml
+++ b/PPTT/Pages/PT/Finalizados.cshtml
@@ -101,7 +101,7 @@
         }
     </tbody>
 </table>
-<a class="btn-action" asp-page="./Menu">Volver al Menu</a>
+<a class="btn-action" asp-page="./Index">Volver al Menu</a>
 <button id="btnExportar">Exportar Excel</button>
 
 
